
Changes in JMurmel-1.2 relative to JMurmel-1.1

 * mlib: added functions compose, map-into, curry, rcurry
 * mlib: inplace modification macros (incf, decf...) now process 1 or more args (was: 1 or 2)
 * (declaim (optimize...
 * some functions are opencoded in compiled code
 * add limited support for macroexpand-1 in compiled code (quoted forms only)
 * fixed compiler primitive "list" to return a mutable list
 * fixed compiled "let*"
 * fixed "append" for compiled code


Changes in JMurmel-1.1 relative to JMurmel-1.0

 * feature expressions #+, #-, and, or, not
 * reader macros #b #o #f for binary, oct and hex, #\ for characters,
   accept (and ignore) #'
 * load, require, provide
 * default library "mlib"
 * documentation in markdown (murmel-langref.md, mlib.md)
 * numerous bugfixes